# batch_bg_remover

./: .gitignore  README.md  README_ko.md  config.json  pyproject.toml  uv run pyinstaller.txt
src/batch_bg_remover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bg_remover/: config.json  gui.py  main.py  processor.py  tracker_exe.py
